--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 457,
    "id": "7e36d9dd-219d-4414-b302-112aabf1605f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 479,
    "id": "f147640c-4a62-454a-a6fb-f14051604670",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 480,
    "id": "57f3032b-6d79-4fb8-8ba9-4e35e6fbec49",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 481,
    "id": "bea0a4b1-fc40-4947-b4f3-4f3d7d619502",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 482,
    "id": "89ad8b6a-ae57-4e5d-807b-6019a736db7e",
    "metadata": {
     "scrolled": true,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 483,
    "id": "1ca33e21-9400-49a3-841a-a0a5846280a4",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 484,
    "id": "d30e8b4b-8b56-4531-b1ab-8bd448d4cdaf",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 485,
    "id": "4fe192aa-130f-4848-819c-3aaf8fd077b0",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "0               81.87784      74.98085%         85.80546%         65.17233%  "
       ]
      },
-     "execution_count": 282,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,8 +239,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 531,
    "id": "62039a2b-8652-406a-83c1-ffaa9f58261c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group by school / school name is index\n",
+    "# used groupby / agg to count student names and find avg for math and reading scores\n",
+    "studentcount_avgs_df = df.set_index([\"school_name\"]).sort_index()\n",
+    "studentcount_avgs_df = studentcount_avgs_df.groupby(\"school_name\").agg({'student_name': 'count', 'math_score': 'mean', 'reading_score': 'mean'})\n",
+    "studentcount_avgs_df = studentcount_avgs_df.rename(columns={\"student_name\":\"Total Students\", \"math_score\":\"Average Math Score\", \"reading_score\":\"Average Reading Score\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
+   "id": "12ddf1ef-4f58-4515-951a-3644bcb8bfd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create df with school name as index, with school type and budget\n",
+    "grouped_school_data_df = school_data.set_index([\"school_name\"]).sort_index()\n",
+    "grouped_school_data_df = grouped_school_data_df[([\"type\", \"budget\"])]\n",
+    "grouped_school_data_df = grouped_school_data_df.rename(columns={\"type\":\"School Type\", \"budget\": \"Total School Budget\"})\n",
+    "\n",
+    "# merge this data pulled from school_data w/ other merged dataframes\n",
+    "merged_dfs = pd.merge(grouped_school_data_df,studentcount_avgs_df, on=\"school_name\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 533,
+   "id": "738e397d-0be5-4d1d-a259-7ec235abec6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create mask to only include data with students who passed math\n",
+    "passed_math_df = df.loc[(df[\"math_score\"] >= 70.0)]\n",
+    "# create df with school name as index, with count of test scores 70 or higher in math\n",
+    "math_grouped_df = passed_math_df.groupby(\"school_name\").agg({'math_score': 'count'})\n",
+    "math_grouped_df = math_grouped_df.rename(columns={\"math_score\":\"count_passed_math\"})\n",
+    "\n",
+    "# create mask to only include data with students who passed reading\n",
+    "passed_reading_df = df.loc[(df[\"reading_score\"] >= 70.0)]\n",
+    "# create df with school name as index, with count of test scores 70 or higher in reading\n",
+    "reading_grouped_df = passed_reading_df.groupby(\"school_name\").agg({'reading_score': 'count'})\n",
+    "reading_grouped_df = reading_grouped_df.rename(columns={\"reading_score\":\"count_passed_reading\"})\n",
+    "\n",
+    "# create mask to only include data with students who passed both math & reading\n",
+    "passed_both_df = df.loc[(df[\"math_score\"] >= 70.0) & (df[\"reading_score\"] >= 70.0)]\n",
+    "# create df with school name as index, with count of test scores 70 or higher in both math & reading\n",
+    "both_grouped_df = passed_both_df.groupby(\"school_name\").agg({'reading_score': 'count'})\n",
+    "both_grouped_df = both_grouped_df.rename(columns={\"reading_score\":\"count_passed_overall\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 534,
+   "id": "bcbc750a-12e0-4601-b0a9-7ada2fa9e36b",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# merge dataframes created so far\n",
+    "merged_dfs = pd.merge(merged_dfs, math_grouped_df, on=\"school_name\")\n",
+    "merged_dfs = pd.merge(merged_dfs,reading_grouped_df, on=\"school_name\")\n",
+    "merged_dfs = pd.merge(merged_dfs,both_grouped_df, on=\"school_name\")\n",
+    "\n",
+    "# reorder\n",
+    "merged_dfs = merged_dfs[[\"School Type\", \"Total Students\", \"Total School Budget\", \"Average Math Score\",\"Average Reading Score\", \"count_passed_math\", \"count_passed_reading\", \"count_passed_overall\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 535,
+   "id": "7bba33df-aebe-418a-a2d9-0bbcf372de25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add new column, calculating per student budget\n",
+    "merged_dfs[\"Per Student Budget\"] = merged_dfs[\"Total School Budget\"] / merged_dfs[\"Total Students\"]\n",
+    "\n",
+    "# add new column, calculating % passed math\n",
+    "merged_dfs[\"% Passing Math\"] = (merged_dfs[\"count_passed_math\"] / merged_dfs[\"Total Students\"]) * 100\n",
+    "\n",
+    "# add new column, calculating % passed reading\n",
+    "merged_dfs[\"% Passing Reading\"] = (merged_dfs[\"count_passed_reading\"] / merged_dfs[\"Total Students\"]) * 100\n",
+    "\n",
+    "# add new column, calculating % passed math & reading\n",
+    "merged_dfs[\"% Overall Passing\"] = (merged_dfs[\"count_passed_overall\"] / merged_dfs[\"Total Students\"]) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "id": "9141db15-92a3-4a71-879e-4c4ad1dc6f1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove extra columns\n",
+    "school_summary_df = merged_dfs.drop(columns=[\"count_passed_math\",\"count_passed_reading\",\"count_passed_overall\"])\n",
+    "\n",
+    "# rearrange columns\n",
+    "school_summary_df = school_summary_df[[\"School Type\", \"Total Students\", \"Total School Budget\", \"Per Student Budget\", \"Average Math Score\",\"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 537,
+   "id": "12653f62-17be-4975-9884-c0279f179f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format columns\n",
+    "school_summary_df[\"Total School Budget\"] = school_summary_df[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "school_summary_df[\"Per Student Budget\"] = school_summary_df[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "school_summary_df[\"% Passing Math\"] = school_summary_df[\"% Passing Math\"].map(\"{:.5f}%\".format)\n",
+    "school_summary_df[\"% Passing Reading\"] = school_summary_df[\"% Passing Reading\"].map(\"{:.5f}%\".format)\n",
+    "school_summary_df[\"% Overall Passing\"] = school_summary_df[\"% Overall Passing\"].map(\"{:.5f}%\".format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 538,
+   "id": "c25d3469-80af-4334-97cb-935b371e0ded",
    "metadata": {},
    "outputs": [
     {
@@ -264,12 +388,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>reading_score</th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -278,138 +414,110 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
        "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
        "      <td>77.048432</td>\n",
        "      <td>81.033963</td>\n",
+       "      <td>66.68006%</td>\n",
+       "      <td>81.93328%</td>\n",
+       "      <td>54.64228%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
        "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
        "      <td>83.061895</td>\n",
        "      <td>83.975780</td>\n",
+       "      <td>94.13348%</td>\n",
+       "      <td>97.03983%</td>\n",
+       "      <td>91.33477%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
        "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
        "      <td>76.711767</td>\n",
        "      <td>81.158020</td>\n",
+       "      <td>65.98847%</td>\n",
+       "      <td>80.73923%</td>\n",
+       "      <td>53.20448%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
        "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
        "      <td>77.102592</td>\n",
        "      <td>80.746258</td>\n",
+       "      <td>68.30960%</td>\n",
+       "      <td>79.29901%</td>\n",
+       "      <td>54.28989%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
        "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
        "      <td>83.351499</td>\n",
        "      <td>83.816757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hernandez High School</th>\n",
-       "      <td>4635</td>\n",
-       "      <td>77.289752</td>\n",
-       "      <td>80.934412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Holden High School</th>\n",
-       "      <td>427</td>\n",
-       "      <td>83.803279</td>\n",
-       "      <td>83.814988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Huang High School</th>\n",
-       "      <td>2917</td>\n",
-       "      <td>76.629414</td>\n",
-       "      <td>81.182722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Johnson High School</th>\n",
-       "      <td>4761</td>\n",
-       "      <td>77.072464</td>\n",
-       "      <td>80.966394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pena High School</th>\n",
-       "      <td>962</td>\n",
-       "      <td>83.839917</td>\n",
-       "      <td>84.044699</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rodriguez High School</th>\n",
-       "      <td>3999</td>\n",
-       "      <td>76.842711</td>\n",
-       "      <td>80.744686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shelton High School</th>\n",
-       "      <td>1761</td>\n",
-       "      <td>83.359455</td>\n",
-       "      <td>83.725724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>1635</td>\n",
-       "      <td>83.418349</td>\n",
-       "      <td>83.848930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wilson High School</th>\n",
-       "      <td>2283</td>\n",
-       "      <td>83.274201</td>\n",
-       "      <td>83.989488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wright High School</th>\n",
-       "      <td>1800</td>\n",
-       "      <td>83.682222</td>\n",
-       "      <td>83.955000</td>\n",
+       "      <td>93.39237%</td>\n",
+       "      <td>97.13896%</td>\n",
+       "      <td>90.59946%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       student_name  math_score  reading_score\n",
+       "                     School Type  Total Students Total School Budget  \\\n",
+       "school_name                                                            \n",
+       "Bailey High School      District            4976       $3,124,928.00   \n",
+       "Cabrera High School      Charter            1858       $1,081,356.00   \n",
+       "Figueroa High School    District            2949       $1,884,411.00   \n",
+       "Ford High School        District            2739       $1,763,916.00   \n",
+       "Griffin High School      Charter            1468         $917,500.00   \n",
+       "\n",
+       "                     Per Student Budget  Average Math Score  \\\n",
        "school_name                                                   \n",
-       "Bailey High School             4976   77.048432      81.033963\n",
-       "Cabrera High School            1858   83.061895      83.975780\n",
-       "Figueroa High School           2949   76.711767      81.158020\n",
-       "Ford High School               2739   77.102592      80.746258\n",
-       "Griffin High School            1468   83.351499      83.816757\n",
-       "Hernandez High School          4635   77.289752      80.934412\n",
-       "Holden High School              427   83.803279      83.814988\n",
-       "Huang High School              2917   76.629414      81.182722\n",
-       "Johnson High School            4761   77.072464      80.966394\n",
-       "Pena High School                962   83.839917      84.044699\n",
-       "Rodriguez High School          3999   76.842711      80.744686\n",
-       "Shelton High School            1761   83.359455      83.725724\n",
-       "Thomas High School             1635   83.418349      83.848930\n",
-       "Wilson High School             2283   83.274201      83.989488\n",
-       "Wright High School             1800   83.682222      83.955000"
+       "Bailey High School              $628.00           77.048432   \n",
+       "Cabrera High School             $582.00           83.061895   \n",
+       "Figueroa High School            $639.00           76.711767   \n",
+       "Ford High School                $644.00           77.102592   \n",
+       "Griffin High School             $625.00           83.351499   \n",
+       "\n",
+       "                      Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "school_name                                                                    \n",
+       "Bailey High School                81.033963      66.68006%         81.93328%   \n",
+       "Cabrera High School               83.975780      94.13348%         97.03983%   \n",
+       "Figueroa High School              81.158020      65.98847%         80.73923%   \n",
+       "Ford High School                  80.746258      68.30960%         79.29901%   \n",
+       "Griffin High School               83.816757      93.39237%         97.13896%   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "school_name                             \n",
+       "Bailey High School           54.64228%  \n",
+       "Cabrera High School          91.33477%  \n",
+       "Figueroa High School         53.20448%  \n",
+       "Ford High School             54.28989%  \n",
+       "Griffin High School          90.59946%  "
       ]
      },
-     "execution_count": 311,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# group by school / school name is index\n",
-    "# used groupby / agg to count student names and find avg for math and reading scores\n",
-    "groupby_school_df = df.set_index([\"school_name\"]).sort_index()\n",
-    "groupby_school_df = groupby_school_df.groupby(\"school_name\").agg({'student_name': 'count', 'math_score': 'mean', 'reading_score': 'mean'})\n",
-    "groupby_school_df.head(15)\n"
+    "school_summary_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738e397d-0be5-4d1d-a259-7ec235abec6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
